# quantumclean-final

./: CHANGELOG.md  __init__ (10).py  base (2).py  basic_usage.py  case1_customer_validation.py  case2_transaction_anomalies.py  case3_pipeline_governance.py  categorical.py  ci.yml  isolation_forest.py  not_null.py  pandas_backend.py  pyproject.toml  regex.py  results.py  schema.py  sprint2_features.py  test_case_studies.py  test_duckdb_backend.py  test_isolation_forest.py  test_lineage.py  test_schema.py  tracker.py
quantumclean/: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
quantumclean/examples/case_studies/: case2_transaction_anomalies.py  case3_pipeline_governance.py
quantumclean/quantumclean/: __init__.py
quantumclean/quantumclean/backends/: __init__.py  base.py  duckdb_backend.py  pandas_backend.py
quantumclean/quantumclean/detectors/: __init__.py  base.py  results.py  statistical.py
quantumclean/quantumclean/lineage/: tracker.py
quantumclean/quantumclean/scoring/: scorer.py
quantumclean/quantumclean/validators/: base.py  categorical.py  range.py  regex.py  schema.py
quantumclean/tests/: conftest.py  test_backends.py  test_case_studies.py  test_categorical.py  test_duckdb_backend.py  test_email.py  test_isolation_forest.py  test_lineage.py  test_range.py  test_regex.py  test_schema.py  test_sla.py  test_statistical_detector.py  test_version.py
