[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumclean"
version = "1.0.0"
description = "A production-grade, extensible data quality library for data engineers."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Devansh" },
    { name = "Darshan" },
    { name = "Rakesh Manimaran" },
]
keywords = ["data-quality", "validation", "data-engineering", "etl", "anomaly-detection"]
dependencies = [
    "pandas>=1.3",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
ml = ["scikit-learn>=1.0"]
duckdb = ["duckdb>=0.9"]
spark = ["pyspark>=3.3"]

[tool.setuptools.packages.find]
include = ["quantumclean*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
